# cli-memory-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
crates/app/: Cargo.toml
crates/app/src/: bin_test.rs  bootstrap.rs  cli.rs  doctor.rs  install.rs  lib.rs  main.rs  mcp.rs
crates/app/tests/: cli_tests.rs  mcp_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  ids.rs  lib.rs  models.rs  provider.rs
crates/engine/: Cargo.toml
crates/engine/src/: checkpoints.rs  embed.rs  lib.rs  model_cache.rs  retrieval.rs  schema.sql  storage.rs  vector.rs
crates/engine/tests/: retrieval_tests.rs  storage_tests.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: assets.rs  detect.rs  installers.rs  lib.rs
crates/integrations/src/importers/: antigravity_cli.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  hermes.rs  mod.rs  opencode.rs  zed.rs
crates/integrations/tests/: antigravity_import_tests.rs  claude_import_tests.rs  codex_import_tests.rs  copilot_import_tests.rs  detect_tests.rs  gemini_import_tests.rs  hermes_import_tests.rs  opencode_db_import_tests.rs  opencode_import_tests.rs  zed_import_tests.rs
npm/: install.js  platform.js
skills/cli-memory-retrieval/: SKILL.md
tests/fixtures/antigravity-cli/session-1/: implementation_plan.md  task.md  task.md.metadata.json
tests/fixtures/claude/: minimal-session.jsonl  mixed-events-session.jsonl
tests/fixtures/codex/: minimal-session.jsonl
tests/fixtures/copilot/: minimal-session.jsonl  real-events-session.jsonl
tests/fixtures/gemini/: minimal-session.json
tests/fixtures/hermes/: minimal-session.jsonl
tests/fixtures/opencode/: minimal-session.json
tests/fixtures/zed/: minimal-session.zed.json  summary-only.zed.json
