[package]
name = "cli-memory-engine"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cli-memory-core = { path = "../core" }
hf-hub = "0.4.3"
model2vec-rs = "0.1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
turbovec = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"] }

[dev-dependencies]
tempfile = "3"
